--- a/app/views/public/customers/confirm_withdraw.html.erb
+++ b/app/views/public/customers/confirm_withdraw.html.erb
@@ -6,6 +6,6 @@
     退会する場合は、「退会する」をクリックしてください。
   </p>
 
-  <%= link_to "退会しない", customers_mypage_path, class:"btn btn-primary ms-3 mt-4" %>
+  <%= link_to "退会しない", customer_path(current_customer.id), class:"btn btn-primary ms-3 mt-4" %>
   <%= link_to "退会する", customers_withdraw_path, method: :patch, class:"btn btn-danger ms-3 mt-4" %>
 </div>
