--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -18,7 +18,7 @@
                 <% end %>
               </td>
               <td>
-                <%= link_to post_path(posted.id) do %>
+                <%= link_to post_path(posted.customer.id) do %>
                   <%= posted.body %>
                 <% end %>
               </td>
