--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -36,7 +36,7 @@
                 <% end %>
               </td>
               <td>
-                <%= link_to post_path(posted.id) do %>
+                <%= link_to post_path(posted.customer.id) do %>
                   <%= posted.body %>
                 <% end %>
               </td>
