--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -28,7 +28,7 @@
                 <% end %>
               </td>
               <td>
-                <%= link_to admin_post_path(posted.customer.id) do %>
+                <%= link_to admin_post_path(posted.id) do %>
                   <%= posted.body %>
                 <% end %>
               </td>
